fix horizontal scroll bar

--- a/client/src/components/modules/Feed.css
+++ b/client/src/components/modules/Feed.css
@@ -1,4 +1,4 @@
 .content-container {
   width: 75%;
-  padding: 2% 5% 0% 15%;
+  padding: 2% 5% 5% 15%;
 }
